Fix CSS to remove card alignment

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -56,9 +56,6 @@ body {
     font-size: 16px;
 }
 
-.align-right {
-    padding-left: 2vw;
-}
 /** End cards **/
 
 /** Base template **/
